changed preview again

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     <meta property="og:title" content="Computational Biology at Berkeley" />
     <meta property="og:description" content="A student-driven community exploring the intersection of computer science, biology, and healthcare at UC Berkeley." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/src/assets/preview.png" />
 
+    <!--
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    -->
   </head>
 
   <body>
