--- a/index.html
+++ b/index.html
@@ -9,17 +9,14 @@
     
     <!-- GitHub Pages SPA redirect handler -->
     <script>
-      // Redirect from 404.html with the path encoded in the query
-      (function(l) {
-        if (l.search[1] === '/' ) {
-          var decoded = l.search.slice(1).split('&').map(function(s) { 
-            return s.replace(/~and~/g, '&')
-          }).join('?');
-          window.history.replaceState(null, null,
-              l.pathname.slice(0, -1) + decoded + l.hash
-          );
+      // Check if we were redirected from 404.html
+      (function() {
+        var redirect = sessionStorage.redirect;
+        delete sessionStorage.redirect;
+        if (redirect && redirect !== location.href) {
+          history.replaceState(null, null, redirect);
         }
-      }(window.location))
+      })();
     </script>
 
     <meta property="og:title" content="Computational Biology at Berkeley" />
